@startuml

title __BMOB's Class Diagram__\n

  namespace com.jue.framework {
    namespace bmob {
      class com.jue.framework.bmob.BmobManager {
          {static} - BMOB_NEW_DOMAIN : String
          {static} - BMOB_SDK_ID : String
          {static} - mInstance : BmobManager
          + addFateSet()
          + addFriend()
          + addFriend()
          + addPrivateSet()
          + addUpdateSet()
          + baseQuery()
          + delFateSet()
          + delPrivateSet()
          + deleteFriend()
          + fetchUserInfo()
          {static} + getInstance()
          + getUser()
          + initBmob()
          + isLogin()
          + loginByAccount()
          + pushSquare()
          + queryAllSquare()
          + queryAllUser()
          + queryFateSet()
          + queryMyFriends()
          + queryObjectIdUser()
          + queryPhoneUser()
          + queryPrivateSet()
          + queryUpdateSet()
          + requestSMS()
          + signOrLoginByMobilePhone()
          + uploadFirstPhoto()
          - BmobManager()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace bmob {
      interface com.jue.framework.bmob.BmobManager.OnUploadPhotoListener {
          {abstract} + OnUpdateDone()
          {abstract} + OnUpdateFail()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace bmob {
      class com.jue.framework.bmob.FateSet {
          - userId : String
          + getUserId()
          + setUserId()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace bmob {
      class com.jue.framework.bmob.Friend {
          + getFriendUser()
          + getUser()
          + setFriendUser()
          + setUser()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace bmob {
      class com.jue.framework.bmob.IMUser {
          - age : int
          - birthday : String
          - constellation : String
          - desc : String
          - hobby : String
          - nickName : String
          - photo : String
          - sex : boolean
          - status : String
          - tokenNickName : String
          - tokenPhoto : String
          + getAge()
          + getBirthday()
          + getConstellation()
          + getDesc()
          + getHobby()
          + getNickName()
          + getPhoto()
          + getStatus()
          + getTokenNickName()
          + getTokenPhoto()
          + isSex()
          + setAge()
          + setBirthday()
          + setConstellation()
          + setDesc()
          + setHobby()
          + setNickName()
          + setPhoto()
          + setSex()
          + setStatus()
          + setTokenNickName()
          + setTokenPhoto()
          + toString()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace bmob {
      class com.jue.framework.bmob.PrivateSet {
          - phone : String
          - userId : String
          + getPhone()
          + getUserId()
          + setPhone()
          + setUserId()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace bmob {
      class com.jue.framework.bmob.SquareSet {
          {static} + PUSH_IMAGE : int
          {static} + PUSH_MUSIC : int
          {static} + PUSH_TEXT : int
          {static} + PUSH_VIDEO : int
          - mediaUrl : String
          - pushTime : long
          - pushType : int
          - text : String
          - userId : String
          + getMediaUrl()
          + getPushTime()
          + getPushType()
          + getText()
          + getUserId()
          + setMediaUrl()
          + setPushTime()
          + setPushType()
          + setText()
          + setUserId()
          + toString()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace bmob {
      class com.jue.framework.bmob.UpdateSet {
          - desc : String
          - path : String
          - versionCode : int
          + getDesc()
          + getPath()
          + getVersionCode()
          + setDesc()
          + setPath()
          + setVersionCode()
      }
    }
  }
  

  com.jue.framework.bmob.BmobManager +-down- com.jue.framework.bmob.BmobManager.OnUploadPhotoListener
  com.jue.framework.bmob.FateSet -up-|> cn.bmob.v3.BmobObject
  com.jue.framework.bmob.Friend -up-|> cn.bmob.v3.BmobObject
  com.jue.framework.bmob.Friend o-- com.jue.framework.bmob.IMUser : friendUser
  com.jue.framework.bmob.Friend o-- com.jue.framework.bmob.IMUser : user
  com.jue.framework.bmob.IMUser -up-|> cn.bmob.v3.BmobUser
  com.jue.framework.bmob.PrivateSet -up-|> cn.bmob.v3.BmobObject
  com.jue.framework.bmob.SquareSet -up-|> cn.bmob.v3.BmobObject
  com.jue.framework.bmob.UpdateSet -up-|> cn.bmob.v3.BmobObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
